<resources>
    <string name="app_name">Car Wash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Ingreso</string>
    <string name="banner">Banner</string>
    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="login_enter">Iniciar sesión</string>
    <string name="login_no_account">¿No tiene una cuenta?</string>
    <string name="login_register">Crea una cuenta</string>
    <string name="login_app_version">V %s</string>
    <string name="login_act_dist_title">Activación Pendiente</string>
    <string name="login_act_dist_msg">Registro enviado.\nSe le informará cuando el administrador apruebe su registro.</string>
    <string name="accept">Aceptar</string>
    <string name="ok">OK</string>
    <string name="register_label">Registro</string>
    <string name="register_email">Correo*</string>
    <string name="register_password">Contraseña*</string>
    <string name="register_repeat_password">Repita contraseña*</string>
    <string name="register_check_dis">Registrarse como distribuidor</string>
    <string name="register_next">Registrar</string>
    <string name="register_razon_social">Nombres / Razon Social*</string>
    <string name="register_ruc">DNI / CEXT / RUC*</string>
    <string name="register_cellphone">Número de Teléfono</string>
    <string name="register_whatsapp">Número de Whatsapp</string>
    <string name="recover_label">Olvidé mi Clave</string>
    <string name="recover_msg">Ingrese la dirección de correo con la que te registraste y enseguida te enviaremos un correo con un código para restablecer tu contraseña.</string>
    <string name="recover_email">Correo</string>
    <string name="recover_send_code">Enviar Código</string>
    <string name="new_pass_label">Nueva Clave</string>
    <string name="new_pass_msg">Ingrese el código enviado al correo %s e ingrese su nueva clave.</string>
    <string name="new_pass_code">Código</string>
    <string name="new_pass_password">Contraseña</string>
    <string name="new_pass_repeat_password">Repita contraseña</string>
    <string name="new_passr_next">Cambiar Clave</string>
    <string name="verify_label">Verificar Correo</string>
    <string name="verify_msg">Ingrese el código de verificación que se le envió a su correo %s para confirmarlo. Si no lo recibió solicite uno nuevo haciendo click abajo.</string>
    <string name="verify_code">Código</string>
    <string name="verify_send_code">Solicitar nuevo código</string>
    <string name="verify_sent_code">Nuevo código enviado</string>
    <string name="verify_next">Verificar</string>
    <string name="title_activity_main_dis">Distribuidor</string>
    <string name="title_activity_main_cli">Cliente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lavado de Carros Santa Rosa</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_date">Buscar Fecha</string>
    <string name="menu_reserve_list">Reservas</string>
    <string name="menu_my_places">Locales</string>
    <string name="menu_my_services">Servicios</string>
    <string name="menu_my_schedules">Horarios</string>
    <string name="user_photo">Foto de usuario</string>
    <string name="action_search">Buscar</string>
    <string name="foto_car_descr">Foto de auto</string>
    <string name="service_title">Servicios</string>
    <string name="reserve_details">Detalle de Reserva</string>
    <string name="service_state_attended">Atendido</string>
    <string name="service_state_pending">Pendiente</string>
    <string name="service_state_canceled">Cancelado</string>
    <string name="service">Servicio</string>
    <string name="service_price">Precio (S/)</string>
    <string name="service_active">Activo</string>
    <string name="service_delete">Eliminar servicio</string>
    <string name="service_delete_msg">Se va eliminar el siguiente servicio:\n%s</string>
    <string name="service_edit">Editar servicio</string>
    <string name="service_add">Nuevo servicio</string>
    <string name="my_data_title">Mis Datos</string>
    <string name="my_data_edit_title">Editar Mis Datos</string>
    <string name="my_data_dis_logo">Logo Distribuidor</string>
    <string name="my_data_change_logo">Cambiar Logo</string>
    <string name="my_data_razon_social">Nombres / Razon Social</string>
    <string name="my_data_nombres">Nombres</string>
    <string name="my_data_ape_pat">Apellido Paterno</string>
    <string name="my_data_ape_mat">Apellido Materno</string>
    <string name="my_data_ruc">RUC</string>
    <string name="my_data_cellphone">Número de Teléfono</string>
    <string name="my_data_whatsapp">Número de Whatsapp</string>
    <string name="my_data_email">Email</string>
    <string name="my_data_change_photo">Cambiar foto</string>
    <string name="action_edit">Editar</string>
    <string name="action_add">Agregar</string>
    <string name="action_save">Guardar</string>
    <string name="action_delete">Eliminar</string>
    <string name="title_activity_main">Administrador</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="new_place">Nuevo Local</string>
    <string name="place_my_location">Mi Ubicacion</string>
    <string name="place_departamento">Departamento</string>
    <string name="place_provincia">Provincia</string>
    <string name="place_distrito">Distrito</string>
    <string name="place_address">Dirección</string>
    <string name="place_title_new">Nuevo Local</string>
    <string name="place_title_edit">Editar Local</string>
    <string name="place_title_view">Ver Local</string>
    <string name="place_select_map">Click para seleccionar en el mapa</string>
    <string name="place_delete">Eliminar</string>
    <string name="place_delete_msg">Eliminar el local también anulará sus horarios correspondientes y afectará a futuras reservas.\n¿Desea eliminar el local?</string>
    <string name="place_save">Guardar</string>
    <string name="place_save_msg">Se guardará la información del local</string>
    <string name="schedules_label_local">Local</string>
    <string name="schedules_label_freq">Frecuencia</string>
    <string name="schedules_label_start_end">Inicio - Fin</string>
    <string name="schedules_label_start">Inicio</string>
    <string name="schedules_label_end">Fin</string>
    <string name="schedules_label_start_sel">Seleccione Inicio</string>
    <string name="schedules_label_end_sel">Seleccione Fin</string>
    <string name="schedules_label_turno">Turno</string>
    <string name="schedules_label_intervalo">Intervalo</string>
    <string name="schedules_label_vista_previa">Vista Previa</string>
    <string name="schedules_label_intervalo_min">Intervalo (minutos)</string>
    <string name="schedules_freq_all">Todos los días</string>
    <string name="schedules_freq_lun_vie">Lun - Vie</string>
    <string name="schedules_freq_custom">Personalizado</string>
    <string name="schedules_freq_lunes">Lunes</string>
    <string name="schedules_freq_martes">Martes</string>
    <string name="schedules_freq_miercoles">Miércoles</string>
    <string name="schedules_freq_jueves">Jueves</string>
    <string name="schedules_freq_viernes">Viernes</string>
    <string name="schedules_freq_sabado">Sábado</string>
    <string name="schedules_freq_domingo">Domingo</string>
    <string name="schedules_turno_manana">Mañana</string>
    <string name="schedules_turno_tarde">Tarde</string>
    <string name="schedules_title_new">Nuevo Horario</string>
    <string name="schedules_title_edit">Editar Horario</string>
    <string name="schedules_title_view">Ver Horario</string>
    <string name="schedules_delete">Eliminar Horario</string>
    <string name="schedules_delete_msg">Eliminar horarios afectará a futuras reservas.\n¿Desea eliminar horario?</string>
    <string name="schedules_save">Guardar</string>
    <string name="schedules_save_msg">Se guardará la información de horario</string>
    <string name="loading">Cargando</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_distrib">Distribuidores</string>
    <string name="title_distrib_short">Distrib</string>
    <string name="title_usuarios">Usuarios</string>
    <string name="title_publicidad">Anuncios</string>
    <string name="title_publicidad_new">Nuevo anuncio</string>
    <string name="title_account">Perfil</string>
    <string name="title_settings">Configuración</string>
    <string name="title_account_edit">Editar Perfil</string>
    <string name="title_add_admin">Nuevo Administrador</string>
    <string name="action_add_admin">Agregar Administrador</string>
    <string name="btnsh_ruc">RUC: %s</string>
    <string name="btnsh_correo">Correo: %s</string>
    <string name="btnsh_actions">Acciones:</string>
    <string name="btnsh_enable_distr">Habilitar/Deshabilitar distribuidor</string>
    <string name="btnsh_enable_user">Habilitar/Deshabilitar usuario</string>
    <string name="btnsh_change_type">Cambiar tipo de usuario</string>
    <string name="btnsh_type_admin">Administrador</string>
    <string name="btnsh_type_client">Cliente</string>
    <string name="btnsh_type_distrib">Distribuidor</string>
    <string name="btnsh_save">Guardar cambios</string>
    <string name="btnsh_delete">Eliminar usuario</string>
    <string name="btnsh_delete_msg">¿Eliminar el usuario seleccionado?</string>
    <string name="btnsh_aprove">Aprobar</string>
    <string name="btnsh_aprove_msg">¿Aprobar el distribuidor seleccionado?</string>
    <string name="btnsh_reject">Rechazar</string>
    <string name="btnsh_reject_msg">¿Rechazar el distribuidor seleccionado?</string>
    <string name="btnsh_verif_pend">Verificación Pendiente</string>
    <string name="btnsh_current_user">Usuario actual</string>
    <string name="btnsh_add_photo">Nueva foto</string>
    <string name="btnsh_delete_photo">Eliminar foto actual</string>
    <string name="btnsh_change_pass">Cambiar Clave</string>
    <string name="announc_img_descr">Anuncio</string>
    <string name="announc_descr">Descripción</string>
    <string name="change_pass_title">Cambiar Contraseña</string>
    <string name="menu">Menú</string>
    <string name="menu_my_data">Mis datos</string>
    <string name="menu_reserve">Reservar</string>
    <string name="menu_my_reserves">Mis Reservas</string>
    <string name="menu_my_cars">Mis Autos</string>
    <string name="menu_my_directions">Mis Direcciones</string>
    <string name="car_title_detail">Auto</string>
    <string name="title_reserve_confirm">Confirmar Reserva</string>
    <string name="title_reserve_detail">Reserva</string>
    <string name="dir_title_view">Ver Dirección</string>
    <string name="new_dir">Nueva Dirección</string>
    <string name="title_client">Cliente</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="action_add_fav">Agregar Favorito</string>
    <string name="action_del_fav">Eliminar Favorito</string>
    <string name="action_navigation">Ruta a Local</string>
    <string name="action_call">Llamar</string>
    <string name="action_filter_by">Filtrar por</string>
</resources>