<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_reserve_list"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/menu_reserve_list" />
    <item
        android:id="@+id/nav_my_places"
        android:icon="@drawable/ic_outline_place_24"
        android:title="@string/menu_my_places" />
    <item
        android:id="@+id/nav_my_services"
        android:icon="@drawable/ic_outline_home_repair_service_24"
        android:title="@string/menu_my_services" />
    <item
        android:id="@+id/nav_my_schedules"
        android:icon="@drawable/ic_baseline_schedule_24"
        android:title="@string/menu_my_schedules" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_outline_manage_accounts_24"
        android:title="@string/menu" />
</menu>