<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_dis"
    app:startDestination="@+id/nav_reserve_list">

    <fragment
        android:id="@+id/nav_reserve_list"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve_list_dis.ReserveListFragment"
        android:label="@string/menu_reserve_list"
        tools:layout="@layout/fragment_reserve_list" >
        <action
            android:id="@+id/action_nav_reserve_list_to_serviceDetailsFragment"
            app:destination="@id/nav_reserve_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="pe.com.carwashperuapp.carwashapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_account_edit"
            app:destination="@id/navigation_account_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_places"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.MyPlacesFragment"
        android:label="@string/menu_my_places"
        tools:layout="@layout/fragment_my_places" >
        <action
            android:id="@+id/action_nav_my_places_to_nav_place_detail"
            app:destination="@id/nav_place_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_services"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_services.MyServicesFragment"
        android:label="@string/menu_my_services"
        tools:layout="@layout/fragment_my_services" >
        <action
            android:id="@+id/action_nav_my_services_to_nav_add_service"
            app:destination="@id/nav_add_service" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_schedules"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_schedules.MySchedulesFragment"
        android:label="@string/menu_my_schedules"
        tools:layout="@layout/fragment_my_schedules" >
        <action
            android:id="@+id/action_nav_my_schedules_to_nav_schedules_detail"
            app:destination="@id/nav_schedules_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_reserve_details"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve_details.ReserveDetailsFragment"
        android:label="@string/reserve_details"
        tools:layout="@layout/fragment_reserve_details" />

    <fragment
        android:id="@+id/navigation_account_edit"
        android:name="pe.com.carwashperuapp.carwashapp.ui.account.AccountEditFragment"
        android:label="@string/title_account_edit"
        tools:layout="@layout/fragment_account_edit" />
    <fragment
        android:id="@+id/nav_add_place"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.AddPlaceFragment"
        android:label="@string/new_place"
        tools:layout="@layout/fragment_add_place" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="pe.com.carwashperuapp.carwashapp.ui.menu_distrib.MenuDistribFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu_distrib" >
        <action
            android:id="@+id/action_navigation_menu_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_menu_to_navigation_change_pass"
            app:destination="@id/navigation_change_pass" />
    </fragment>
    <fragment
        android:id="@+id/navigation_change_pass"
        android:name="pe.com.carwashperuapp.carwashapp.ui.change_password.ChangePassFragment"
        android:label="@string/change_pass_title"
        tools:layout="@layout/fragment_change_pass" />
    <fragment
        android:id="@+id/nav_add_service"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_services.AddServiceFragment"
        android:label="@string/service_title"
        tools:layout="@layout/fragment_add_service" />
    <fragment
        android:id="@+id/nav_place_detail"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.PlaceDetailFragment"
        android:label="@string/place_title_view"
        tools:layout="@layout/fragment_place_detail" >
        <action
            android:id="@+id/action_nav_place_detail_to_nav_add_place"
            app:destination="@id/nav_add_place" />
    </fragment>
    <fragment
        android:id="@+id/nav_schedules_detail"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_schedules.ScheduleDetailFragment"
        android:label="@string/schedules_title_view"
        tools:layout="@layout/fragment_schedule_detail"/>
</navigation>