<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_fav"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/action_add_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_del_fav"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/action_del_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_navigation"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_navigation_24"
        android:title="@string/action_navigation"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_call_24"
        android:title="@string/action_call"
        app:showAsAction="always" />
</menu>