<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reserve">

    <fragment
        android:id="@+id/nav_reserve"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve.SearchLocalFragment"
        android:label="@string/menu_reserve"
        tools:layout="@layout/fragment_search_local">
        <action
            android:id="@+id/action_nav_reserve_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_nav_reserve_to_localFragment"
            app:destination="@id/localFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_reserves"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserves_list_cli.MyReservesFragment"
        android:label="@string/menu_my_reserves"
        tools:layout="@layout/fragment_my_reserves" >
        <action
            android:id="@+id/action_nav_my_reserves_to_reserveDetailFragment"
            app:destination="@id/reserveDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_cars"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_cars.MyCarsFragment"
        android:label="@string/menu_my_cars"
        tools:layout="@layout/fragment_my_cars">
        <action
            android:id="@+id/action_nav_my_cars_to_nav_car_detail"
            app:destination="@id/nav_car_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_my_places"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.MyPlacesFragment"
        android:label="@string/menu_my_directions"
        tools:layout="@layout/fragment_my_places">
        <action
            android:id="@+id/action_nav_my_places_to_nav_place_detail"
            app:destination="@id/nav_place_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_menu"
        android:name="pe.com.carwashperuapp.carwashapp.ui.menu_distrib.MenuDistribFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_menu_distrib">
        <action
            android:id="@+id/action_navigation_menu_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_menu_to_navigation_change_pass"
            app:destination="@id/navigation_change_pass" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="pe.com.carwashperuapp.carwashapp.ui.account.AccountFragment"
        android:label="@string/title_client"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_navigation_account_to_navigation_account_edit"
            app:destination="@id/navigation_account_edit" />
    </fragment>
    <fragment
        android:id="@+id/navigation_change_pass"
        android:name="pe.com.carwashperuapp.carwashapp.ui.change_password.ChangePassFragment"
        android:label="@string/change_pass_title"
        tools:layout="@layout/fragment_change_pass" />
    <fragment
        android:id="@+id/navigation_account_edit"
        android:name="pe.com.carwashperuapp.carwashapp.ui.account.AccountEditFragment"
        android:label="@string/title_account_edit"
        tools:layout="@layout/fragment_account_edit" />
    <fragment
        android:id="@+id/nav_place_detail"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.PlaceDetailFragment"
        android:label="@string/dir_title_view"
        tools:layout="@layout/fragment_place_detail">
        <action
            android:id="@+id/action_nav_place_detail_to_nav_add_place"
            app:destination="@id/nav_add_place" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_place"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_places.AddPlaceFragment"
        android:label="@string/new_dir"
        tools:layout="@layout/fragment_add_place" />
    <fragment
        android:id="@+id/nav_car_detail"
        android:name="pe.com.carwashperuapp.carwashapp.ui.my_cars.CarDetailFragment"
        android:label="@string/car_title_detail"
        tools:layout="@layout/fragment_car_detail" />
    <fragment
        android:id="@+id/reserveResumenFragment"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve.ReserveResumenFragment"
        android:label="@string/title_reserve_confirm"
        tools:layout="@layout/fragment_reserve_resumen">
        <action
            android:id="@+id/action_reserveResumenFragment_to_nav_my_reserves"
            app:destination="@id/nav_my_reserves"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/reserveDetailFragment"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserves_list_cli.ReserveDetailFragment"
        android:label="@string/title_reserve_detail"
        tools:layout="@layout/fragment_reserve_detalle" />
    <fragment
        android:id="@+id/nav_favoritos"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve.FavoritesFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favoritos_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_nav_favoritos_to_localFragment"
            app:destination="@id/localFragment" />
    </fragment>
    <fragment
        android:id="@+id/localFragment"
        android:name="pe.com.carwashperuapp.carwashapp.ui.reserve.LocalFragment"
        android:label="fragment_local_reserva"
        tools:layout="@layout/fragment_local_reserva" >
        <action
            android:id="@+id/action_localFragment_to_reserveResumenFragment"
            app:destination="@id/reserveResumenFragment" />
    </fragment>

</navigation>