<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_filter_by"
        android:orderInCategory="200"
        android:title="@string/action_filter_by"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_admin"
        android:orderInCategory="200"
        android:title="@string/action_add_admin"
        app:showAsAction="never" />
</menu>