<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="300"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/action_save"
        app:showAsAction="always" />
</menu>