<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.new_password.NewPasswordFragment">

    <data>

        <variable
            name="NewPassFragment"
            type="pe.com.valegrei.carwashapp.ui.new_password.NewPasswordFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ly_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/medium_margin"
            android:paddingTop="@dimen/large_margin">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/banner"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/min_margin"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.CarwashApp.LogoTitle" />

            <TextView
                android:layout_marginTop="@dimen/mid_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_pass_label"
                android:textAppearance="@style/TextAppearance.CarwashApp.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/new_pass_msg"
                android:textAppearance="@style/TextAppearance.CarwashApp.LabelWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:labelFor="@id/edt_code"
                android:text="@string/new_pass_code"
                android:textAppearance="@style/TextAppearance.CarwashApp.LabelWhite" />

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_states"
                android:ems="10"
                android:fontFamily="@font/opensans_regular"
                android:inputType="number"
                tools:ignore="TextContrastCheck"
                tools:text="j42das3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:labelFor="@id/edt_password"
                android:text="@string/new_pass_password"
                android:textAppearance="@style/TextAppearance.CarwashApp.LabelWhite" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_states"
                android:ems="10"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck"
                tools:text="123456789" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:labelFor="@id/edt_repeat_password"
                android:text="@string/new_pass_repeat_password"
                android:textAppearance="@style/TextAppearance.CarwashApp.LabelWhite" />

            <EditText
                android:id="@+id/edt_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_states"
                android:ems="10"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck"
                tools:text="123456789" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mid_margin"
                android:background="@drawable/rounded_button_states"
                android:fontFamily="@font/opensans_semibold"
                android:onClick="@{()->NewPassFragment.goMain()}"
                android:text="@string/new_passr_next"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>